--- a/projektgrudniowy/galery3.html
+++ b/projektgrudniowy/galery3.html
@@ -26,7 +26,7 @@
         <li><a href="galery2.html">galery2</a></li>
         <li><a href="galery3.html">galery3</a></li>
         <li><a href="galery4.html">galery4</a></li>
-        <li><a href="calculator.html">Calculator</a></li>
+        <li><a href="calculator.html">MIZUKI :C</a></li>
         <li>
           <button class="header__menu--close__list" id="menu--close">
             Close
@@ -35,10 +35,34 @@
       </ul>
     </header>
 
-    <div class="about-zdj3__content">
-      <div class="about-zdj3__content--image">
-        <img src="./Style/Img/img4.jpg" alt="" />   
+    <section class="about-nothing2">
+      <div class="about-nothing2__content">
+        <div class="about-nothing1__content--text">
+          <img src="./Style/Img/img1.jpg" alt="" />
+        </div>
+        <div class="about-nothing2__content--text">
+          <h1>CHILL GUY:</h1>
+          <p>
+            are we chill man?
+          </p>
+        </div>
+      </div>
+    </section>
         
+    <section class="about-nothing1">
+      <div class="about-nothing1__content">
+        <div class="about-nothing1__content--image">
+          <h1>kebab:</h1>
+          <p>
+            Do I look like a chill guyy?
+          </p>
+        </div>
+        <div class="about-nothing1__content--image">
+          <img src="./Style/Img/img10.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+
     </div>
   </body>
 </html>
