--- a/projektgrudniowy/galery4.html
+++ b/projektgrudniowy/galery4.html
@@ -26,7 +26,7 @@
         <li><a href="galery2.html">galery2</a></li>
         <li><a href="galery3.html">galery3</a></li>
         <li><a href="galery4.html">galery4</a></li>
-        <li><a href="calculator.html">Calculator</a></li>
+        <li><a href="calculator.html">MIZUKI :C</a></li>
         <li>
           <button class="header__menu--close__list" id="menu--close">
             Close
@@ -38,6 +38,7 @@
     <div class="about-zdj5__content">
       <div class="about-zdj5__content--image">
         <img src="./Style/Img/img5.jpg" alt="" />   
+        <p>yeah. look at yourself</p>
     </div>
   </body>
 </html>
