--- a/projektgrudniowy/galery.html
+++ b/projektgrudniowy/galery.html
@@ -26,7 +26,7 @@
         <li><a href="galery2.html">galery2</a></li>
         <li><a href="galery3.html">galery3</a></li>
         <li><a href="galery4.html">galery4</a></li>
-        <li><a href="calculator.html">Calculator</a></li>
+        <li><a href="calculator.html">MIZUKI :C</a></li>
         <li>
           <button class="header__menu--close__list" id="menu--close">
             Close
@@ -35,21 +35,12 @@
       </ul>
     </header>
 
-    <div class="about-zdj1__content">
-      <div class="about-zdj1__content--image">
-        <img src="./Style/Img/img2.jpg" alt="" />   
-        <div class="about-zdj1__content">
-          <div class="about-zdj1__content--image">
-            <img src="./Style/Img/img2.jpg" alt="" />   
-            <div class="about-zdj1__content">
-              <div class="about-zdj1__content--image">
-                <img src="./Style/Img/img2.jpg" alt="" />   
-                <div class="about-zdj1__content">
-                  <div class="about-zdj1__content--image">
-                    <img src="./Style/Img/img2.jpg" alt="" />   
-                    <div class="about-zdj1__content">
-                      <div class="about-zdj1__content--image">
-                        <img src="./Style/Img/img2.jpg" alt="" />   
-    </div>
+    <section class="about-thatsme">
+        <div class="about-thatsme__content--image">
+          <img src="./Style/Img/img6.jpg" alt="Avatar"  />
+          <p>MIZUKI D:</p>
+        </div>  
+      </div>
+    </section>
   </body>
 </html>
